--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,5 +2,8 @@
 
 export(sco_acquire)
 export(sco_poisson_xg)
+export(sco_poisson_xg_calibration)
+export(sco_poisson_xg_predictions)
+export(sco_poisson_xg_tester)
 export(sco_relative_strength)
 importFrom(magrittr,"%>%")
