added standings function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,4 +6,5 @@ export(sco_poisson_xg_calibration)
 export(sco_poisson_xg_predictions)
 export(sco_poisson_xg_tester)
 export(sco_relative_strength)
+export(sco_standings)
 importFrom(magrittr,"%>%")
