--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,10 +2,13 @@
 
 export(sco_acquire)
 export(sco_bayesian_btts)
+export(sco_misc_stats_develop)
 export(sco_poisson_xg)
 export(sco_poisson_xg_calibration)
 export(sco_poisson_xg_predictions)
 export(sco_poisson_xg_tester)
+export(sco_ref_card_plot)
 export(sco_relative_strength)
 export(sco_standings)
+export(sco_team_card_plot)
 importFrom(magrittr,"%>%")
