cleaned up and added documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,3 +13,4 @@ export(sco_relative_strength)
 export(sco_standings)
 export(sco_team_card_plot)
 importFrom(magrittr,"%>%")
+importFrom(rlang,.data)
