--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,8 @@ Description: The package allows easy integration with historical standard data o
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-Imports: dplyr,
+Imports: 
+    dplyr,
     lubridate,
     stringr,
     magrittr,
@@ -18,5 +19,6 @@ Imports: dplyr,
     ggplot2,
     scales,
     viridis,
-    readxl
-RoxygenNote: 6.1.1
+    readxl,
+    rlang
+RoxygenNote: 7.0.2
