--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ export(sco_bayesian_btts)
 export(sco_bet_acquire)
 export(sco_bet_plot)
 export(sco_misc_stats_develop)
+export(sco_player_contribution_matrix)
+export(sco_player_data)
 export(sco_poisson_xg)
 export(sco_poisson_xg_predictions)
 export(sco_ref_card_plot)
