--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(sco_acquire)
 export(sco_bayesian_btts)
 export(sco_bet_acquire)
 export(sco_bet_plot)
+export(sco_goal_per_minute)
 export(sco_misc_stats_develop)
 export(sco_player_contribution_matrix)
 export(sco_player_data)
