deleted old functions and added new card functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,14 +4,9 @@ export(sco_acquire)
 export(sco_bayesian_btts)
 export(sco_bet_acquire)
 export(sco_bet_plot)
-export(sco_corner_plot)
-export(sco_goal_per_minute)
-export(sco_misc_stats_develop)
-export(sco_player_contribution_matrix)
-export(sco_player_data)
+export(sco_match_cards)
 export(sco_poisson_xg)
-export(sco_ref_card_plot)
 export(sco_standings)
-export(sco_team_card_plot)
+export(sco_team_cards)
 importFrom(magrittr,"%>%")
 importFrom(rlang,.data)
