added corner model + fixed bugg on match cards

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,5 +8,6 @@ export(sco_match_cards)
 export(sco_poisson_xg)
 export(sco_standings)
 export(sco_team_cards)
+export(sco_team_corners)
 importFrom(magrittr,"%>%")
 importFrom(rlang,.data)
